# quiz-solver-stepik

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  ai_client.py  auth.py  browser_handler.py  browser_manager.py  config.py  detector.py  docker-compose.yaml  entrypoint.sh  exceptions.py  logging_config.py  main.py  pyproject.toml  retry_utils.py  schemas.py
docs/: functions.md
k8s/solver/: deployment.yaml  externalsecret.yaml  service.yaml
orchestration/: __init__.py  auth.py  navigation.py  step_processor.py
src/: ai_client.py  config.py  exceptions.py  logging_config.py  main.py  retry_utils.py  validation_utils.py
src/db/: knowledge_cache.py  user_repository.py
src/orchestration/: __init__.py  auth.py  course_processor.py  navigation.py  solver_registry.py  step_checker.py  step_processor.py
src/orchestration/solvers/: __init__.py  base.py  choice.py  matching.py  sorting.py  text.py
src/stepik/: __init__.py  api_client.py  auth.py  exceptions.py  http_client.py  reply_builders.py  schemas.py  solvers.py  utils.py
src/web/: models.py  server.py
src/web/models/: __init__.py  job.py  solve.py  user.py
